# jaegers.ai

./: .env_example  .gitignore  ARCHITECTURE.md  DEMO.md  EXPLANATION.md  README.md  pyproject.toml
backend/: README_API.md  api_server.py  requirements.txt  run_api.py  test_api.py
backend/agent/: agent.py  agent_backup.py  cliphunt.py  debug.py  langgraph.json
vfront/: package-lock.json  package.json
vfront/app/: globals.css  page.tsx
vfront/lib/: mock-data.ts
vfront/public/: mockData.json
